gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test23327.d
version https://git-lfs.github.com/spec/v1
oid sha256:9f1e73a9968d155aa936fa0cd131d9f9a6239ea819abb8305f7f5da9368f6a04
size 144
