gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag10405.d
version https://git-lfs.github.com/spec/v1
oid sha256:cee23f4347f04750de15514a12fdc87599fdccdf6957b83a1476ab740be6106a
size 144
